2008-01-13  Zeeshan Ali Khattak  <zeenix@gmail.com>
	Vinicius Depizzol <vdepizzol@gmail.com>

	* data/pixmaps/Makefile.am:
	* data/pixmaps/av-cp.png:
	* data/pixmaps/universal-cp.png:
	* src/av-cp/gui.c:
	* src/universal-cp/gui.c:

	Add icons for universal-cp and av-cp.

2007-12-31  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- Move some static functions to the top of the file.
	- Subscribe to LastChange event to be notified of the state changes.

2007-12-27  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	Refactor: Put all the code that sets the state in the treemodel into
	a separate function.

2007-12-20  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- get_av_transport() takes and returns a proxy rather than an info
	  object.
	- Get/Create the av_transport proxy in the add_media_renderer().
	- Keep the av_transport's playback state in the treemodel.
	- Use 'AVTransport::GetTransportInfo' to retreive the state in the
	  beginning.
	- Implement get_selected_renderer_state().

2007-12-19  Zeeshan Ali Khattak  <zeenix@gmail.com>

	* src/av-cp/renderer-combo.c:

	- Replace the GetProtocolInfoData with a duplicate of udn since that
	  is all that is needed in the get_protocol_info_cb().
	- Fix a potential leak.

2007-12-17  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:
	* src/av-cp/renderer-controls.c:

	Replace get_selected_renderer() with get_selected_av_transport().

2007-12-13  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/renderer-controls.c:

	Refactor: Put all the code related to sending the action to
	AVTransport into one function.

2007-12-10  Zeeshan Ali Khattak  <zeenix@gstreamer.net>

	* src/av-cp/playlist-treeview.c:
	* src/av-cp/playlist-treeview.h:

	Add function to get the details about the currently selected item.

	* src/av-cp/renderer-combo.c:
	* src/av-cp/renderer-combo.h:
