@@ -5,7 +5,7 @@ shareddir = $(datadir)/gupnp-tools
 endif
 
 AM_CFLAGS = $(LIBGUPNP_CFLAGS) $(LIBGLADE_CFLAGS) -I$(top_srcdir) \
-	    -DDATA_DIR='"$(shareddir)"'
+	    -DDATA_DIR='"$(shareddir)"' -I../common
 
 bin_PROGRAMS = gupnp-network-light
 
@@ -15,7 +15,8 @@ gupnp_network_light_SOURCES = main.c \
 			      main.h \
 			      gui.h \
 			      upnp.h
-gupnp_network_light_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS)
+gupnp_network_light_LDADD = $(LIBGLADE_LIBS) $(LIBGUPNP_LIBS) \
+			    ../common/libicons.a
 gupnp_network_light_LDFLAGS = -export-dynamic
 
 MAINTAINERCLEANFILES = Makefile.in
