@@ -79,22 +79,6 @@ setup_treeviews (void)
         setup_device_treeview (glade_xml);
 }
 
-static GdkPixbuf *
-load_pixbuf_file (const char *file_name)
-{
-        GdkPixbuf *pixbuf;
-        char *path;
-
-        path = g_build_filename (DATA_DIR, file_name, NULL);
-        pixbuf = gdk_pixbuf_new_from_file (path, NULL);
-        if (pixbuf == NULL)
-                g_critical ("failed to get image %s\n", file_name);
-
-        g_free (path);
-
-        return pixbuf;
-}
-
 gboolean
 on_delete_event (GtkWidget *widget,
                  GdkEvent  *event,
